--- a/Report/chapter1.tex
+++ b/Report/chapter1.tex
@@ -1,13 +1,14 @@
 % !TEX root = master.tex
 \chapter{Motivation}
 \label{chapter:1}
-Die Faszination für den genetischen Fortschritt und die Anpassungsfähigkeit in der Natur bildet die Grundlage für dieses Projekt. In der biologischen Welt lösen Lebewesen durch genetische Evolution und Mutationen Aufgaben zunehmend effizienter. Diese Beobachtung weckt das Interesse an der Frage, inwieweit ähnliche Prinzipien in Form von unsupervised learning auf den Bereich der Computerwissenschaften übertragen werden könnten. Speziell die Implementierung von genetikbasiertem Lernen in Computer-Agenten, angelehnt an natürliche Vorbilder, stellt ein faszinierendes Forschungsfeld dar.
+Die Faszination für den genetischen Fortschritt und die Anpassungsfähigkeit in der Natur bildet die Grundlage für dieses Projekt. In der biologischen Welt lösen Lebewesen durch genetische Evolution und Mutationen Aufgaben zunehmend effizienter. Diese Beobachtung weckt das Interesse an der Frage, inwieweit ähnliche Prinzipien in Form von unsupervised learning auf den Bereich der Computerwissenschaften übertragen werden könnten. Speziell die Implementierung von genetikbasiertem Lernen in Computer-Agenten, angelehnt an natürliche Vorbilder, stellt ein interessantes Forschungsfeld dar.
 
 Die Natur bietet unzählige Beispiele für effiziente Anpassungs- und Lernprozesse, die durch genetische Variationen und natürliche Selektion getrieben werden. Diese Prozesse haben zu einer beeindruckenden Vielfalt und Spezialisierung der Arten geführt. In der Informatik könnten ähnliche Mechanismen genutzt werden, um lernfähige Systeme zu entwickeln, die sich selbstständig an neue Aufgaben und Umgebungen anpassen können. Die Herausforderung liegt darin, Konzepte der natürlichen Evolution in Algorithmen zu übersetzen, die in der Lage sind, komplexe Probleme effektiv zu lösen.
 
 Der Ansatz, genetikbasierte Lernmethoden auf Computer-Agenten anzuwenden, bietet das Potenzial, die Grenzen herkömmlicher KI-Methoden zu überwinden. Insbesondere könnte dieser Ansatz dazu beitragen, das Problem der Überanpassung (Overfitting) zu verringern, da genetische Algorithmen eine natürliche Tendenz zur Exploration und Diversifikation aufweisen. Zudem ermöglicht die Verwendung von unsupervised learning Methoden eine flexiblere Anpassung an unbekannte oder sich verändernde Umgebungen, was in vielen realen Anwendungsfällen von großer Bedeutung ist.
 
-Diese Arbeit zielt darauf ab, die Machbarkeit und Effizienz von genetikbasiertem Lernen in Computer-Agenten zu untersuchen. Durch die Kombination von Theorien aus der Biologie und Informatik wird versucht, ein tieferes Verständnis dafür zu entwickeln, wie maschinelles Lernen durch die Prinzipien der Evolution bereichert werden kann. Die Ergebnisse könnten weitreichende Implikationen für die Entwicklung zukünftiger KI-Systeme haben und einen bedeutenden Schritt in Richtung der Schaffung autonomer, adaptiver Lernsysteme darstellen.
+Diese Arbeit zielt darauf ab, die Machbarkeit und Effizienz von genetikbasiertem Lernen in Computer-Agenten zu untersuchen. Durch die Kombination von Theorien aus der Biologie und Informatik wird versucht, ein tieferes Verständnis dafür zu entwickeln, wie maschinelles Lernen durch die Prinzipien der Evolution bereichert werden kann. 
+
 
 
 
