--- a/Report/chapter2.tex
+++ b/Report/chapter2.tex
@@ -3,15 +3,16 @@
 
 \section{Grundlagen von NEAT}
 (2 Seiten)
----- Historisches Wachsen von genetischen Algos
----- Bestandteile
+---- Historisches Wachsen von genetischen Algos - erste ML powered Chatbots, Neuronale Netze, Supervised Learning, Big Data und am Ende das unsupervised deep-learning mit sich selbst adjustierenden Gewichte. Darauf basierend im nächsten Schritt modellierung natürlichen Verhaltens durch genetik. 
+---- Bestandteile (Grafik zum Grundlegenden Konzept von NEAT)
 
 \section{Grundlagen von simplen Computerspielen}
 (1 Seiten)
----- Historische Bedeutung von Computerspielen
----- Bestandteile
+---- Historische Bedeutung von Computerspielen (hohe gesellschaftliche Durchdringung von Spielen egal ob Militär oder Familie, Kompetitv aber begrenzt, zuerst Brettspiele dann Computer, soziales Tun, Vorfornt in der Analyse von menschlichen psychologischen Verhalten)
+---- Bestandteile (variierende Umgebung, neue Input Reize, ein Ziel, z.B. Highscore oder Überleben, häufig Kompetitv, Spieler steuert einen Agenten in einer simplifizierten Welt, visuell häufig ausgeklügelt aber nicht ausschlaggebend für gutes Spiel -> Überleitung zu den Grundlagen der Visualisierung)
 
 \section{Grundlagen zum Thema Visualisierung}
 (2 Seiten)
----- Psychologische Effekte von Visualisierung (vgl. Text/Bild) beim lernen
----- Neuster Stand bei visuellen Effekten und Erkentnisse
+---- Ganz Basic warum Visualisierung -> weil leicht konsumierbar von Menschen, häufig leichter verständlicher und kompensierter als Text. 
+---- Psychologische Effekte von Visualisierung (vgl. Text/Bild/Videos) in spielen, dann verallgemeinert auch beim lernen, leichteres lernen? schnelleres lernen? (Grafik zum biologischen sehen) 
+---- Neuster Stand bei visuellen Effekten und Erkenntnisse, Mikroanimationen, Zerlegung komplexer Themen in Videos - Bewegtbildproduktionen. Trend zu immer kürzeren Videos und schnellere Schnittfolge um Aufmerksamkeit zu bewahren. Finder Anklang auch in der Wissenschaft, leichtere Vermittlung komplexer Inhalte an viele Zuhörer - mehr Wissensvideos zum Beispiel auch im Informatik/Mathematik und Biologie Bereich. 
