etwas geänderte Struktur

--- a/Report/chapter2.tex
+++ b/Report/chapter2.tex
@@ -13,10 +13,11 @@
 
 \section{Grundlagen zum Thema Visualisierung}
 (2 Seiten)
----- Ganz Basic warum Visualisierung -> weil leicht konsumierbar von Menschen, häufig leichter verständlicher und kompensierter als Text. 
+---- Ganz Basic warum Visualisierung -> weil leicht konsumierbar von Menschen, häufig leichter verständlicher und kompensierter als Text. Vergleiche Dateispeichergröße zwischen Text, Audio und Video 
 
-https://www.frontiersin.org/articles/10.3389/fncir.2015.00051/full
-https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6091269/
+https://open.oregonstate.education/aandp/chapter/13-1-sensory-receptors/
+https://www.frontiersin.org/articles/10.3389/fncir.2015.00051/full  [Add to Citavi project by DOI] 
+https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6091269/  [Add to Citavi project by PMC ID] 
 https://publishup.uni-potsdam.de/opus4-ubp/frontdoor/deliver/index/docId/5047/file/digarec06\_S116\_156.pdf
 
 
@@ -27,3 +28,5 @@ https://publishup.uni-potsdam.de/opus4-ubp/frontdoor/deliver/index/docId/5047/fi
 demzufolge verstehensförderlich auszuwirken." (S. 122 d-nb.info)
 Visualisierungen erhöhen den Lernerfolg und reduzieren die mentale Belastungen bei dem Verständnis von wissenschaftlichen Texten. (vgl. S. 118 d-nb.info)
 Zudem reduzieren Videos die mentale Belastung im Vergleich zu statischen Bildern beim Verständnis neuer Konzepte. (vgl. S. 324 hbz-nrw.de)
+
+
