--- a/Report/chapter3.tex
+++ b/Report/chapter3.tex
@@ -1,18 +1,18 @@
 % !TEX root = master.tex
 \chapter{Praktische Ausarbeitung}
 \label{chapter:3}
-\section{Kombination von NEAT und Computerspielen}
+\section{Projektbeschreibung}
 (1 Seiten)
 ---- kurze Überleitung, warum?
 ---- Ziel \& Fehlermetriken
-
-\section{Anforderungen an NEAT in Games}
+---- Kombination von NEAT und Computerspielen
+\section{Implementierungskonzept}
 (2 Seiten)
 ---- Techstack Auswahl, warum?
 ---- funktionale \& nicht funktionale
 ---- Implementierung  
 
-\section{Anforderungen an die Visualisierung}
+\section{Visualisierungskonzept}
 (2 Seiten)
 ---- Techstack Auswahl, warum?
 ---- funktionale \& nicht funktionale (maximale Verständlichkeit bei minimaler Komplexität. Lustiger Gag weil ähnlich zu NEAT. Soll den Algorithmus akkurat wiederspiegeln und erklären. Story technisch ansprechend. Eher länger da vorhin besprochen längere Videos mehr lehren. Visualisierung in Form eines Videos für maximale zugänglichkeit und verdaulichkeit. Vermittlung von einem neuen wissenschaftlichen Konzept.-hohes Expertisen niveau und vorwissen erforderlich. Soll ansprechend für eine Mathematik versierte und wissenschafts interessierte Zuhörerschaft sein. Dabei darf das Video nicht länger als 15 Minuten sein und die Python Bibliothek Manim soll hierzu verwendet werden. Der Stil soll wissenschaftlich schlicht sein.)
