Visualisierung Grundlagen guter Progress

--- a/Report/chapter2.tex
+++ b/Report/chapter2.tex
@@ -12,12 +12,39 @@
 ---- Bestandteile (variierende Umgebung, neue Input Reize, ein Ziel, z.B. Highscore oder Überleben, häufig Kompetitv, Spieler steuert einen Agenten in einer simplifizierten Welt, visuell häufig ausgeklügelt aber nicht ausschlaggebend für gutes Spiel -> Überleitung zu den Grundlagen der Visualisierung)
 
 \section{Grundlagen zum Thema Visualisierung}
-(2 Seiten)
+
+Bei Visualisierungen handelt es sich um ein vielschichtiges und multidisziplinäres Thema. Dementsprechend zollen unterschiedliche Disziplinen dem Thema Respekt zu auf diversen unterschiedlichen Ebenen, sowohl was fachliche tiefe als auch Domänenwissen angeht. Relevant in diesem Kontext sind vor allem die biologische Grundlage des Sehens und der visuellen Perzeption. Darauf aufbauend wird entsprechend auf den Effekt von digitalen Visualisierungen beim lernen im Kontext von Videos eingegangen.
+
+Die menschliche Wahrnehmung ist ein komplexer Prozess, der stark von den sensorischen Rezeptoren beeinflusst wird, welche die Umgebung in elektrochemische Signale umwandeln. Diese Umwandlung, bekannt als sensorische Transduktion, erfolgt, wenn ein Stimulus von einem Rezeptor erkannt wird, der ein graduiertes Potential in einem sensorischen Neuron erzeugt. Wenn dieses Potential stark genug ist, erzeugt das sensorische Neuron ein Aktionspotential, das ins zentrale Nervensystem weitergeleitet wird, wo es mit anderen sensorischen Informationen integriert wird, um eine bewusste Wahrnehmung dieses Stimulus zu ermöglichen und eine Handlung auszuführen \cite{BasicHumanPhysiology, AnatomyPhysiology}. Hierbei agieren die acht menschlichen Sinne als unterschiedlich spezialisierte sensorischen Rezeptoren für jeweils eine seperate Transduktion welche es gilt zusammenzuführen. 
+
+Darauf basierend stellt sich die naheliegende Frage, welche von diesen Sinnen den größten Einfluss auf die am Ende wahrgenommene Situation und ausgeführte Handlung hat. 
+
+\textbf{Neurobiologie des Lernens und der Wahrnehmung}
+
+Die menschliche Wahrnehmung und das Lernen sind komplexe Prozesse, die eng miteinander verknüpft sind und von neurobiologischen Mechanismen gesteuert werden. Jedes Neugeborene kommt mit etwa 100 Milliarden Neuronen zur Welt, die durch Lernprozesse zunehmend festere Verbindungen bilden und so komplexe neuronale Netzwerke entwickeln \cite{UllmannNeurobiologie}. Dieser Aufbau von Neuronenpopulationen im Cortex ist entscheidend für die kognitive Entwicklung und das Gedächtnis.
+
+Das limbische System, insbesondere der Hippocampus und die Amygdala, spielt eine zentrale Rolle bei der Bewertung und Speicherung von Informationen. Es vergleicht eingehende sensorische Daten mit vorhandenem Wissen und Emotionen, was entscheidend für die Gedächtnisbildung ist \cite{WÜRZ, UllmannLimbicSystem}. 
+
+\textbf{Visualisierung im Lernkontext}
+
+Visualisierungen sind besonders effektiv im Lernprozess, da sie verschiedene kognitive Ebenen stimulieren und so das Verständnis fördern. Sie ermöglichen eine tiefere und umfassendere Verarbeitung von Informationen, indem sie komplexe Konzepte in einer zugänglichen und intuitiven Form darstellen. Dies ist besonders wichtig, da die Neurobiologie des Lernens betont, wie entscheidend es ist, Lerninhalte in einer Weise zu präsentieren, die mit der Funktionsweise des menschlichen Gehirns harmoniert \cite{UllmannMentalRepresentation}.
+
+\textbf{Integration verschiedener Sinnesreize}
+
+Interessant ist der Vergleich der Verarbeitungskapazitäten zwischen visuellen und auditiven Rezeptoren. Die Integration auditiver Stimuli kann die sensorische Kodierung in den Dendriten von Pyramidenzellen im somatosensorischen Cortex verstärken, was die Verarbeitung von Berührungsreizen beeinflusst \cite{NatureCommunications}. Diese multisensorische Integration unterstreicht die Fähigkeit des Gehirns, Informationen aus verschiedenen sensorischen Pfaden effizient zu verarbeiten.
+
+\textbf{Forschungsperspektiven und Zukunft der Visualisierung}
+
+Die Forschung in den Neurowissenschaften, insbesondere die simultanen Aufzeichnungen von Neuronenpopulationen, bietet wertvolle Einblicke in die Varianz der neuronalen Antworten. Solche Erkenntnisse sind entscheidend für das Verständnis, wie das Gehirn lernt und Informationen verarbeitet \cite{FrontiersInNeuroscience}. Zukünftige Forschungen und Entwicklungen im Bereich der Visualisierung versprechen, die Effektivität des Lernens weiter zu steigern, indem sie noch stärker auf die neurobiologischen Grundlagen des Lernens abgestimmt werden.
+
+
 ---- Ganz Basic warum Visualisierung -> weil leicht konsumierbar von Menschen, häufig leichter verständlicher und kompensierter als Text. 
 
+https://open.oregonstate.education/aandp/chapter/13-1-sensory-receptors/
+https://www.uni-wuerzburg.de/fileadmin/43060000/04\_Fort-\_und\_Weiterbildungen\_Lehrkraefte/Herbsttagungen/Herbsttagung\_2016/20161006\_WS\_04\_Neurobiologie.pdf
 https://www.frontiersin.org/articles/10.3389/fncir.2015.00051/full
 https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6091269/
-https://publishup.uni-potsdam.de/opus4-ubp/frontdoor/deliver/index/docId/5047/file/digarec06\_S116\_156.pdf
+
 
 
 ---- Psychologische Effekte von Visualisierung (vgl. Text/Bild/Videos) in spielen, dann verallgemeinert auch beim lernen, leichteres lernen? schnelleres lernen? (Grafik zum biologischen sehen) 
