AMOS und DAVID lego

--- a/Report/bibliography.bib
+++ b/Report/bibliography.bib
@@ -18,7 +18,7 @@
   author = {Bílek, M. and others},
   title = {Selected aspects of the visualization science curriculum subjects},
   year = {2007},
-  publisher = {M&V Hradec Králové},
+  publisher = {M and V Hradec Králové},
   address = {Hradec Králové},
   isbn = {80-86771-21-0},
   pages = {180--190}
@@ -108,7 +108,7 @@
 
 @misc{COMP,
   author = {Stephan, S.},
-  title = {Die Geschichte der Videospiele \& Heimcomputer},
+  title = {Die Geschichte der Videospiele und Heimcomputer},
   url = {https://8bit-museum.de/impressum/},
   note = {Accessed: 30.12.2023}
 }
