--- a/Report/chapter2.tex
+++ b/Report/chapter2.tex
@@ -2,7 +2,7 @@
 \label{chapter:2}
 
 \section{Grundlagen von NEAT}
-
+-- Probelesen TODO @AMOS
 \textbf{Historische Entwicklung genetischer Algorithmen}
 
 Die Entwicklung genetischer Algorithmen ist eng verbunden mit dem Aufkommen und der Evolution des maschinellen Lernens. Beginnend mit den ersten, durch maschinelles Lernen betriebenen Chatbots, erstreckt sich diese Entwicklung über die Fortschritte in neuronalen Netzen, Supervised Learning, Big Data, bis hin zu den neuesten Errungenschaften im Bereich des unsupervised Deep Learning mit selbstadjustierenden Gewichten. Aus diesen Entwicklungen resultierte der nächste Schritt: die Modellierung natürlichen Verhaltens durch Genetik.
@@ -69,7 +69,7 @@ Bereits 1969 wies John Deebs auf die Bedeutung der visuellen Alphabetisierung hi
 
 Visuelle Wahrnehmung und die Verarbeitung visueller Informationen sind wichtige Elemente im Bildungsbereich. Es geht dabei nicht nur um das Verstehen wissenschaftlicher Konzepte, sondern auch um die Fähigkeit, diese Konzepte in neuen Zusammenhängen anzuwenden. Visualisierungen spielen eine große Rolle bei kognitiven Aktivitäten und beim Lernen. Sie ermöglichen es, wissenschaftliche Inhalte auf eine neue Weise zu betrachten und zu verstehen \cite{Wiebe2001}.
 
-Visualisierung wird oft auch als "mentales Bild" oder "mentale Darstellung" bezeichnet. Diese mentalen Bilder helfen Schülern, komplexe wissenschaftliche Konzepte besser zu erfassen und zu verinnerlichen. Die grafische Darstellung, also die Verwendung von Bildern und Diagrammen, ist ein wichtiger Schritt, um diese Konzepte zugänglich und verständlich zu machen. Sie erleichtert das Verständnis verschiedener Wahrnehmungen der Realität und fördert den Lernprozess \cite{Duval1999}.
+Visualisierung wird oft auch als \enquote{mentales Bild} oder \enquote{mentale Darstellung} bezeichnet. Diese mentalen Bilder helfen Schülern, komplexe wissenschaftliche Konzepte besser zu erfassen und zu verinnerlichen. Die grafische Darstellung, also die Verwendung von Bildern und Diagrammen, ist ein wichtiger Schritt, um diese Konzepte zugänglich und verständlich zu machen. Sie erleichtert das Verständnis verschiedener Wahrnehmungen der Realität und fördert den Lernprozess \cite{Duval1999}.
 
 Die Visualisierung soll gesprochene Worte nicht immer ersetzen, sondern vielmehr darauf abzielen, die Aufmerksamkeit der Zuhörenden auf das Wesentliche des Dargebotenen zu lenken und das Verständnis der präsentierten Informationen zu verbessern, sowie den Zugang zum Kern der Inhalte zu erleichtern \cite{Gilbert2005}.
 
